--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "@remixicon/react": "^4.5.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
