--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.2",
     "redux": "^5.0.1",
     "remixicon": "^4.5.0"
   },
